# NucleAli-DP

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
data/: MEMDIST1.txt  MEMDIST2.txt  Temps_DIST1_ALL_INST.txt  Temps_DIST2_ALL_INST.txt  Temps_DP_SOL1_ALL_INST.txt  Temps_DP_SOL2_ALL_INST.txt
docs/: ARCHITECTURE.md  CLI.md
instances/: Inst_0000006_6.adn  Inst_0000010_7.adn  Inst_0000125_BO.adn  Inst_0000200_BO.adn  Inst_0000250_BO.adn
src/: DATA_struct.c  DATA_struct.h  alignment.c  alignment.h  instance_io.c  instance_io.h  main.c
tests/: DIST1vsDIST2.c  Makefile  small_tests.c  testingDP_ALL_INST.c  testingNM_ALL_INST.c  valgrind.rpt
tests/fixtures/invalid_batch/: notes.txt
tests/fixtures/mini_instances/: mini_001.adn  mini_002.adn
